--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,3 +31,20 @@
     text-decoration: none;
     cursor: pointer;
 }
+
+div, h2, h3 {
+    position: relative;
+    text-align: center;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
